--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@refinedev/simple-rest": "^5.0.10",
     "@uiw/react-md-editor": "^3.19.5",
     "antd": "^5.17.0",
-    "react": "^18.0.0",
+    "react": "^18.3.1",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.0.2"
   },
   "devDependencies": {
@@ -41,6 +42,6 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.4.2",
-    "vite": "^5.1.6"
+    "vite": "^6.2.2"
   }
 }
