--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "refine authentication example",
-  "name": "refine authentication example",
+  "name": "refine ",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
