clean Up and next is sorting

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "refine authentication example",
+  "short_name": "Manage Users",
   "name": "refine ",
   "start_url": ".",
   "display": "standalone",
