--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "antd": "^5.24.5",
     "react": "^18.3.1",
     "react-dom": "^18.0.0",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.4.0"
   },
   "devDependencies": {
